Basic Songs Model and collection

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,6 +23,12 @@ footer {
     margin-top:0;
   }
 }
+
+#songs-content {
+  .active {
+    background: #c7ffaf;
+  }
+}
 #player {
   ul {
     margin: 19px 0;
