--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -75,6 +75,12 @@ footer {
   }
 }
 
+#songs-view {
+  tr.active td{
+    background: #9af185;
+  }
+}
+
 @media (min-width: 768px) {
   aside {
     position: fixed;
